--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,15 +1,26 @@
 //Footer
 footer {
+    position: relative;
     color: white;
     background-color: $blue;
     padding: $main-padding*2 0;
+    a {
+        color: #fff;
+        &:hover {
+            color: lighten($blue, 40%);
+        }
+    }
+    a[href^=tel] {
+        @media (min-width: 768px) {
+            color: #ababab;
+        }
+    }
 }
 footer .container {
     flex-direction: column;
     align-items: flex-start;
 }
 footer h4 {
-    //font-family: 'open_sanslight';
     font-weight: 300;
     margin-top: $main-margin;
 }
@@ -23,8 +34,9 @@ address {
     list-style: none;
     margin: 0;
     padding: 0;
+    margin-bottom: 2.5rem;
     @media (min-width: 768px) {
-        
+        margin-bottom: 0;       
     }
 }
 .ul-social li {
@@ -37,4 +49,13 @@ address {
 }
 .ul-social li a:hover {
     color: lighten($blue, 40%);
+}
+.btn-to-top {
+    position: absolute;
+    bottom: 1rem;
+    right: 50%;
+    margin-left: -1.25rem;
+    @media (min-width: 768px) {
+        right: 1rem;
+    }
 }
