--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,6 +1,7 @@
 //Form-section
 .form-section {
     //height: 100vh;
+    padding-bottom: 0;
     @media (min-width: 768px) {
         height: auto;
         padding-top: $section-padding-md-top;
